<resources>
    <string name="app_name">Shijian</string>
    <string name="action_settings">Settings</string>

    <string name="new_time">New Time</string>
    <string name="history">History</string>
    <string name="options">Options</string>

    <string name="title_activity_record_time">RecordTime</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="zero">00:00:00</string>

    <string name="title_activity_save_time_page">SaveTimePage</string>
    <string name="title">Title</string>
    <string name="folder">Folder</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder">[New Folder Name]</string>
    <string name="select_folder">[Select Folder]</string>
    <string name="title_warning">"Please enter a title."</string>
    <string name="folderName_warning">"Please enter a folder name."</string>
    <string name="selectFolder_warning">"Please select a folder option."</string>

    <string name="title_activity_history_page">HistoryPage</string>
    <string name="folders">Folders</string>
    <string name="like_to_do">What would you like to do?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="title_activity_settings_page">SettingsPage</string>

    <string name="title_activity_times_page">TimesPage</string>
    <string name="sort_name">Sort by Name</string>
    <string name="sort_recent">Sort by Recent</string>
    <string name="delete_confirmation">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="empty_delete_confirmation">This folder is empty, would you like to delete it?</string>
</resources>
